fixed radio button with overlapping ids

--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,6 @@
 nav {
   border: 10px solid black;
   margin: 10px;
-  background-color: silver;
 }
 
 body {
